Fix style issues, adjust container and image spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,13 +30,19 @@ h3 {
     color: var(--secondary-color);
 }
 
-h2 {
+h2,
+h3 {
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
 main {
     margin: auto;
+}
+
+img {
+  width: 100%; /* or max-width: 100%; */
+  height: auto;
 }
 
 .section {
@@ -62,11 +68,12 @@ nav {
     background-color: var(--primary-color);
     height: 75px;
     width: 100%;
-    left: 0;
+    right: 0;
     padding: 0 1rem;
     display: none;
     top: 100%;
 }
+
 
 /* Nav toggle */
 #nav-toggle:checked~nav {
@@ -79,6 +86,10 @@ nav {
 
 .nav-toggle-label {
     font-size: 2rem;
+}
+
+.nav .dropdown-menu {
+  z-index: 2000; /* higher than navbar background */
 }
 
 
@@ -122,6 +133,7 @@ nav {
 /* Take Action */
 
 #action {
+    margin: auto;
     text-align: center;
     max-width: 90%;
 }
@@ -134,7 +146,7 @@ nav {
 }
 
 /* Media query: large or landscape phones (576px and up) */
-
+    
 /* Media query: tablets and larger (768px and up) */
 
 /* Large devices (laptops and desktops, 992px and up) */
